--- a/square-root/src/styles/Home.css
+++ b/square-root/src/styles/Home.css
@@ -257,7 +257,7 @@ section#footer {
 .main-punchline--p {
   letter-spacing: 0.03em;
   margin-top: 3%;
-  width: 70%;
+  width: 90%;
   font-size: 1.2rem;
 }
 
@@ -355,21 +355,22 @@ em {
   /*section fourth*/
 
   section#fourth{
-    scroll-snap-align: start;
-    height:100vh;
+    
   }
   
   .sect-4-item1{
-    height:0;
+    
+    display:none;
   }
 
   .sect-4-item2{
+    scroll-snap-align: start;
     grid-column: 1/3;
     grid-row:1;
   }
 
   .sect-4-item3{
-    height:0;
+    display:none;
   }
 
   .sect-4-item4{
@@ -378,7 +379,7 @@ em {
   }
 
   .sect-4-item5{
-    height:0;
+    display:none;
   }
   .sect-4-item6{
     grid-column: 1 / 3;
@@ -392,23 +393,25 @@ em {
       grid-column:2;
     }
 
-    /*section sixth */
-    section#sixth{
+    /*section sixth / contact */
+    section#contact{
       scroll-snap-align: start;
       height:160vh;
     }
   
     .sect-6-item1{
       padding-top:40px;
-      height:70vh;
+      height:80vh;
       
     }
     .sect-6-item2{
       padding-top:20px;
       scroll-snap-align: start;
       text-align: center;
-      grid-column: 2 / 3;
-      width:60%;
+      grid-column: 1 / 3;
+      width:70%;
+      height:fit-content;
+      padding-left: 10%;
     }
 
     section#seventh{
@@ -482,7 +485,7 @@ em {
 
 @media (max-width: 500px){
   .c-section--pad-vh{
-    padding-top:5vh;
+    padding-top:0vh;
   }
   
   .c-grid--3x1{
@@ -548,17 +551,17 @@ em {
   /*section sixth */
 
   section#contact{
-    scroll-snap-align: start;
-    height:200vh;
+    height:180vh;
   }
 
   .sect-6-item1{
+    scroll-snap-align: start;
     height:80vh;
     
   }
   .sect-6-item2{
     scroll-snap-align: start;
-    height:100vh;
+    height:80vh;
   }
 
   .o-form__control{
@@ -569,13 +572,17 @@ em {
   .list-item-label {
     font-size:10px;
     line-height: 0px;
-    
+
   }
   
   /*section seventh */
 
   section#seventh img{
       width:70%;
+  }
+
+  section#footer{
+    height:100vh;
   }
 }
 
