--- a/square-root/src/styles/frontpages.css
+++ b/square-root/src/styles/frontpages.css
@@ -554,6 +554,25 @@ html {
   }
 }
 
+/* plantlist */
+.plantlist {
+  display: grid;
+  grid-template-rows: max-content max-content;
+  grid-template-columns: 1fr 1fr;
+  height: fit-content;
+  width: 100%;
+  grid-gap: 10px 280px;
+  /*grid-gap:clamp(24px,2.9282576867vw,40px);*/
+}
+
+@media (max-width: 1100px) {
+  .plantlist {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr auto;
+    grid-gap: 10px 200px;
+  }
+}
+
 .grid-item0 {
   grid-column: 1 / 3;
   grid-row:1;
