Fixed issues with responsiveness

--- a/square-root/src/styles/frontpages.css
+++ b/square-root/src/styles/frontpages.css
@@ -136,10 +136,9 @@ dt:first-child {
 }
 
 .o-container--sm{
-  padding:2%;
+  margin-top:20%;
+  padding:5%;
   width:100%;
-  margin:auto;
-  height:100%;
 }
 
 .bckgd-white{
