--- a/square-root/src/styles/Home.css
+++ b/square-root/src/styles/Home.css
@@ -19,9 +19,7 @@ Smooth Scroll --------*/
 .front-container section {
   width: 100%;
   height: 100vh;
-  scroll-snap-align: center;
   position: relative;
-  scroll-snap-points-y: 50vh;
 }
 
 
@@ -121,16 +119,18 @@ section#first .see-more {
 section#second {
   height: 100vh;
   max-width: fit-content;
+  scroll-snap-align: start;
 }
 
 section#third {
-  height: 100vh;
   max-width: fit-content;
+  scroll-snap-align: start;
 }
 
 section#fourth {
   height: 100vh;
   max-width: fit-content;
+  scroll-snap-align: start;
   
 }
 
@@ -139,15 +139,18 @@ section#fifth {
   height: 100vh;
   background-image: url("../images/boots.jpg");
   background-size: cover;
+  scroll-snap-align: start;
 }
 
 section#contact {
   height: 100vh;
   background-color: var(--mainGrey);
+  scroll-snap-align: start;
 }
 
 section#seventh {
   height: 100vh;
+  scroll-snap-align: start;
 }
 
 section#seventh img{
@@ -159,6 +162,7 @@ section#seventh img{
 
 section#footer {
   height: calc(70vh - var(--nav-size));
+  scroll-snap-align: start;
 }
 
 .list-item h1 {
@@ -302,6 +306,10 @@ em {
   grid-gap:20px;
 }
 
+.start-here{
+  scroll-snap-align: start;
+}
+
 @media (max-width: 1025px){
 
   .c-section--pad-vh{
@@ -388,11 +396,10 @@ em {
 
     /*section fifth */
     .sect-5-item1{
-      padding-top:100px;
-      padding-right:100px;
-      grid-column:2;
+      grid-column:1/3;
+      width:80%;
     }
-
+  
     /*section sixth / contact */
     section#contact{
       scroll-snap-align: start;
