--- a/square-root/src/styles/Home.css
+++ b/square-root/src/styles/Home.css
@@ -20,7 +20,6 @@ Smooth Scroll --------*/
   width: 100%;
   height: 100vh;
   position: relative;
-  scroll-snap-points-y: 50vh;
 }
 
 
@@ -47,6 +46,7 @@ section#first {
   grid-template-columns: 1.2fr 0.6fr 1.2fr;
   grid-template-rows: 1.5fr 1.1fr 0.4fr;
   height: calc(100vh - var(--nav-size));
+  scroll-snap-align: start;
 }
 
 section#first .logo {
@@ -124,14 +124,7 @@ section#second {
 }
 
 section#third {
-  height: 100vh;
   max-width: fit-content;
-}
-
-section#fourth {
-  height: 100vh;
-  max-width: fit-content;
-<<<<<<< HEAD
   scroll-snap-align: start;
 }
 
@@ -139,9 +132,6 @@ section#fourth {
   height: 100vh;
   max-width: fit-content;
   scroll-snap-align: start;
-=======
->>>>>>> 291288f235c66f9b9cb5c9afc830ace82b2127ad
-  
 }
 
 
@@ -160,10 +150,7 @@ section#contact {
 
 section#seventh {
   height: 100vh;
-<<<<<<< HEAD
   scroll-snap-align: start;
-=======
->>>>>>> 291288f235c66f9b9cb5c9afc830ace82b2127ad
 }
 
 section#seventh img{
@@ -175,10 +162,7 @@ section#seventh img{
 
 section#footer {
   height: calc(70vh - var(--nav-size));
-<<<<<<< HEAD
   scroll-snap-align: start;
-=======
->>>>>>> 291288f235c66f9b9cb5c9afc830ace82b2127ad
 }
 
 .list-item h1 {
@@ -322,13 +306,13 @@ em {
   grid-gap:20px;
 }
 
-<<<<<<< HEAD
 .start-here{
   scroll-snap-align: start;
 }
 
-=======
->>>>>>> 291288f235c66f9b9cb5c9afc830ace82b2127ad
+.end-here{
+  scroll-snap-align: start;
+}
 @media (max-width: 1025px){
 
   .c-section--pad-vh{
@@ -386,7 +370,6 @@ em {
   }
   
   .sect-4-item1{
-    
     display:none;
   }
 
@@ -415,28 +398,18 @@ em {
 
     /*section fifth */
     .sect-5-item1{
-<<<<<<< HEAD
       grid-column:1/3;
       width:80%;
     }
   
-=======
-      padding-top:100px;
-      padding-right:100px;
-      grid-column:2;
-    }
-
->>>>>>> 291288f235c66f9b9cb5c9afc830ace82b2127ad
     /*section sixth / contact */
     section#contact{
-      scroll-snap-align: start;
-      height:160vh;
+      height:180vh;
     }
   
     .sect-6-item1{
       padding-top:40px;
       height:80vh;
-      
     }
     .sect-6-item2{
       padding-top:20px;
@@ -444,14 +417,14 @@ em {
       text-align: center;
       grid-column: 1 / 3;
       width:70%;
-      height:fit-content;
       padding-left: 10%;
     }
 
-    section#seventh{
-      scroll-snap-align: start;
-      padding-top: 20px;
+    /*section seven / logos */
+ section#seventh img{
+        width:60%;
     }
+   
 
 }
 
@@ -512,6 +485,28 @@ em {
   .c-grid--fill img{
     width:20px;
   }
+
+  /*section contact*/
+  section#contact{
+    height:180vh;
+  }
+
+  .sect-6-item1{
+    scroll-snap-align: start;
+    height:80vh;
+    
+  }
+  .sect-6-item2{
+    scroll-snap-align: start;
+    height:80vh;
+  }
+
+   /*section 7 / logos*/
+   section#seventh {
+    padding-top: 20px;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
 
 }
 
@@ -577,15 +572,14 @@ em {
 
   /*section fifth */
   .sect-5-item1{
-    grid-column:1/3;
-    width:80%;
+    
   }
 
 
   /*section sixth */
 
   section#contact{
-    height:180vh;
+    height:200vh;
   }
 
   .sect-6-item1{
