--- a/square-root/src/styles/frontpages.css
+++ b/square-root/src/styles/frontpages.css
@@ -567,7 +567,7 @@ html {
   grid-template-columns: 1fr 1fr;
   height: fit-content;
   width: 100%;
-  grid-gap: 10px 280px;
+  grid-gap: 10px 00px;
   /*grid-gap:clamp(24px,2.9282576867vw,40px);*/
 }
 
@@ -575,7 +575,7 @@ html {
   .plantlist {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr auto;
-    grid-gap: 10px 200px;
+    grid-gap: 10px;
   }
 }
 
