Made grid responsive

--- a/square-root/src/styles/frontpages.css
+++ b/square-root/src/styles/frontpages.css
@@ -457,11 +457,9 @@ html {
 
 .c-grid--4x1 {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: auto;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   grid-gap: 2em;
 }
-
 
 
 .c-grid--3x3fixed{
