--- a/square-root/src/styles/Home.css
+++ b/square-root/src/styles/Home.css
@@ -27,8 +27,6 @@ Smooth Scroll --------*/
 
 /* Hero */
 section#first {
-  background-image: url("../images/background_banner.jpg");
-  background: #c33764; /* fallback colour. Make sure this is just one solid colour. */
   background: -webkit-linear-gradient(
       rgba(139, 166, 139, 0.8),
       rgba(139, 166, 139, 0.8)
@@ -82,6 +80,28 @@ section#first .d {
   justify-content: end;
 }
 
+.list-item h1 {
+  font-size: 35px;
+  font-weight: 600;
+  color: white;
+  line-height: 1.2em;
+  letter-spacing: 0.03;
+}
+
+.list-item {
+  line-height: 1.5em;
+}
+
+.list-item i {
+  font-family: "IBM Plex Serif", serif;
+}
+
+.list-item img {
+  height: 10px;
+  width: 10px;
+  margin-bottom: 15px;
+}
+
 section#first .see-more {
   grid-column: 2;
   grid-row: 3;
@@ -106,11 +126,116 @@ section#first .see-more {
   margin-left: 0.5%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 280px) {
+  section#first {
+    grid-template-rows: 0.8fr 1.1fr 0.4fr;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  section#first .logo {
+    grid-column: 1 / 4;
+  }
+
+  section#first .signup-btn button {
+    font-size: 0.6rem;
+    margin: 30px 0;
+  }
+
+  section#first .d {
+    grid-column: 1 / 4;
+  }
+
+  .list-item h1 {
+    font-size: 22px;
+  }
+
+  .list-item img {
+    height: 9px;
+    width: 9px;
+    margin: 0 4px 10px 0;
+  }
+
   .see-more button {
     font-size: 16px;
   }
 }
+
+@media screen and (min-width: 280px) and (max-width: 320px) {
+  section#first {
+    grid-template-rows: 1fr 1.1fr 0.4fr;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  section#first .logo {
+    grid-column: 1 / 4;
+  }
+
+  section#first .logo img {
+    width: 80%;
+  }
+
+  section#first .d {
+    grid-column: 1 / 4;
+  }
+
+  section#first .signup-btn button {
+    font-size: 0.6rem;
+    margin: 20px 0;
+  }
+
+  .list-item h1 {
+    font-size: 20px;
+  }
+
+  .list-item img {
+    height: 8px;
+    width: 8px;
+    margin: 0 2px 8px 0;
+  }
+
+  .see-more button {
+    font-size: 16px;
+  }
+}
+
+@media screen and (min-width: 360px) and (max-width: 800px) {
+  section#first {
+    grid-template-rows: 1fr 1.1fr 0.4fr;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  section#first .logo {
+    grid-column: 1 / 4;
+  }
+
+  section#first .logo img {
+    width: 80%;
+  }
+
+  section#first .d {
+    grid-column: 1 / 4;
+  }
+  
+  section#first .signup-btn button {
+    font-size: 0.8rem;
+    margin: 30px 0;
+  }
+
+  .list-item h1 {
+    font-size: 24px;
+  }
+
+  .list-item img {
+    height: 8px;
+    width: 8px;
+    margin: 0 2px 10px 0;
+  }
+
+  .see-more button {
+    font-size: 18px;
+  }
+}
+
 /* End of Hero */
 
 section#second {
@@ -157,41 +282,7 @@ section#footer {
   scroll-snap-align: start;
 }
 
-.list-item h1 {
-  font-size: 35px;
-  font-weight: 600;
-  color: white;
-  line-height: 1.2em;
-  letter-spacing: 0.03;
-}
 
-.list-item {
-  line-height: 1.5em;
-}
-
-.list-item i {
-  font-family: "IBM Plex Serif", serif;
-}
-
-.list-item img {
-  height: 10px;
-  width: 10px;
-  margin-bottom: 15px;
-}
-
-.container-white {
-  background-color: white;
-}
-
-@media screen and (max-width: 768px) {
-  .list-item h1 {
-    font-size: 28px;
-  }
-
-  .list-item {
-    line-height: 1.5em;
-  }
-}
 
 .bd-notification {
   padding-top: 40px;
