fixed navbar responsiveness

--- a/square-root/src/App.css
+++ b/square-root/src/App.css
@@ -278,6 +278,30 @@ a {
   color: black;
 }
 
+@media screen and (max-width: 360px) {
+  .nav-header {
+    width: 400px;
+    margin-left: 0.1rem;
+  }
+
+  .sidebar-bars {
+    --button-size: calc(var(--nav-size) * 0.25);
+    width: var(--button-size);
+    height: var(--button-size);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: filter 86ms;
+    cursor: pointer;
+  }
+  .sidebar-bars:hover {
+    filter: brightness(5.2);
+  }
+  .sidebar-bars svg {
+    fill: var(--bg);
+  }
+}
+
 @media screen and (min-width: 1190px) {
   .nav-center {
     max-width: 1170px;
@@ -292,7 +316,27 @@ a {
   }
 }
 
-@media screen and (max-width: 1190px) {
+@media screen and (min-width: 361px) and  (max-width: 1190px) { 
+  .sidebar-bars {
+    --button-size: calc(var(--nav-size) * 0.3);
+    width: var(--button-size);
+    height: var(--button-size);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: filter 86ms;
+    cursor: pointer;
+  }
+  .sidebar-bars:hover {
+    filter: brightness(5.2);
+  }
+  .sidebar-bars svg {
+    fill: var(--bg);
+  }
+
+}
+
+@media screen and  (max-width: 1190px) {
   .nav-menu {
     display: flex;
     flex-direction: column;
@@ -304,7 +348,6 @@ a {
     opacity: 1;
     transition: all 0.5s ease;
     position: absolute;
-
     padding: 20px 0 0;
     margin-top: -20px;
   }
@@ -387,23 +430,6 @@ a {
     background-color: var(--bg);
     color: var(--offWhite);
     transition: all 0.2s ease-out;
-  }
-
-  .sidebar-bars {
-    --button-size: calc(var(--nav-size) * 0.3);
-    width: var(--button-size);
-    height: var(--button-size);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: filter 86ms;
-    cursor: pointer;
-  }
-  .sidebar-bars:hover {
-    filter: brightness(5.2);
-  }
-  .sidebar-bars svg {
-    fill: var(--bg);
   }
 }
 /* end of navbar */
