--- a/square-root/src/styles/Home.css
+++ b/square-root/src/styles/Home.css
@@ -12,15 +12,18 @@ Smooth Scroll --------*/
   overflow-x: hidden;
   height: calc(100vh - var(--nav-size));
   width: 100%;
+
 }
 
 /* common for each section */
 .front-container section {
   width: 100%;
   height: 100vh;
-  scroll-snap-align: center;
   position: relative;
 }
+
+
+
 
 .front-container section p {
   font-size: 1rem;
@@ -43,6 +46,7 @@ section#first {
   grid-template-columns: 1.2fr 0.6fr 1.2fr;
   grid-template-rows: 1.5fr 1.1fr 0.4fr;
   height: calc(100vh - var(--nav-size));
+  scroll-snap-align: start;
 }
 
 section#first .logo {
@@ -114,24 +118,51 @@ section#first .see-more {
 /* End of Hero */
 
 section#second {
+  height: 100vh;
   max-width: fit-content;
+  scroll-snap-align: start;
 }
+
 section#third {
   max-width: fit-content;
+  scroll-snap-align: start;
 }
+
+section#fourth {
+  height: 100vh;
+  max-width: fit-content;
+  scroll-snap-align: start;
+}
+
 
 section#fifth {
+  height: 100vh;
   background-image: url("../images/boots.jpg");
   background-size: cover;
+  scroll-snap-align: start;
 }
 
-section#sixth {
+section#contact {
   height: 100vh;
   background-color: var(--mainGrey);
+  scroll-snap-align: start;
 }
 
+section#seventh {
+  height: 100vh;
+  scroll-snap-align: start;
+}
+
+section#seventh img{
+  width:100%;
+}
+
+
+
+
 section#footer {
-  height: calc(100vh - var(--nav-size));
+  height: calc(70vh - var(--nav-size));
+  scroll-snap-align: start;
 }
 
 .list-item h1 {
@@ -166,7 +197,7 @@ section#footer {
   }
 
   .list-item {
-    line-height: 2.7em;
+    line-height: 1.5em;
   }
 }
 
@@ -211,36 +242,34 @@ section#footer {
 }
 .main-punchline {
   color: var(--mainGrey);
-  line-height: 1.8em;
   text-align: left;
   margin-left: 5%;
 }
 
 .main-punchline--lrg {
-  font-size: 3.5em;
-  line-height: 1em;
+  font-size: 4vw;
   font-weight: 600;
   letter-spacing: 0.02em;
   width: 90%;
-  bottom: 19%;
+  bottom: 20px;
+  line-height: 1.2em;
 }
 .main-punchline strong {
   font-family: "PoppinsBold";
-  line-height: 2em;
 }
 
 .main-punchline--p {
-  font-size: 1.2em;
   letter-spacing: 0.03em;
   margin-top: 3%;
-  width: 70%;
-  line-height: 1.7em;
+  width: 90%;
+  font-size: 1.2rem;
 }
 
 .short-border {
-  border: 3px solid var(--mainGrey);
-  width: 5%;
-  bottom: 0;
+  margin:1em 0;
+  width:10%;
+  border:0;
+  border-top: 7px solid var(--mainGrey);
 }
 
 .short-border-white {
@@ -263,3 +292,339 @@ em {
   font-weight: bold;
   font-size: 1.3em;
 }
+
+.pad-me{
+  padding: 5%;
+  padding-top:10%;
+}
+
+
+/* RESPONSIVE HOMEPAGE */
+
+.c-grid--3x1{
+  display: grid;
+  grid-template-columns: 1fr 1fr minmax(160px, 1fr);
+  grid-template-rows: 1fr 1fr auto;
+  grid-gap:20px;
+}
+
+.start-here{
+  scroll-snap-align: start;
+}
+
+.end-here{
+  scroll-snap-align: start;
+}
+@media (max-width: 1025px){
+
+  .c-section--pad-vh{
+    padding-top:5vh;
+  }
+  .c-grid--3x1{
+    display: grid;
+    grid-template-columns: 0.3fr 1fr;
+    grid-template-rows: 1fr 1fr;
+
+  }
+
+   /*section# second*/
+   .sect-2-title{
+    grid-column:1 / 3;
+    grid-row:1;
+  }
+  .sect-2-desc{
+    grid-column:1 / 3;
+    grid-row:2;
+  }
+
+  .sect-2-item1 {
+    grid-column:1;
+    grid-row:3;
+    margin-left: 5%;
+ }
+ .sect-2-item1 img{
+  width:350px;
+}
+ .sect-2-item2 {
+  grid-column:2;
+  grid-row:3;
+}
+.sect-2-item2 img{
+  width:350px;
+  margin-left: 5%;
+}
+
+  /*section# third*/
+  .grid-item3-vertical{
+    grid-column:1;
+    grid-row:2;
+  }
+
+  .grid-item2-stretch1{
+    grid-column:2;
+    grid-row:2;
+  }
+
+  /*section fourth*/
+
+  section#fourth{
+    
+  }
+  
+  .sect-4-item1{
+    display:none;
+  }
+
+  .sect-4-item2{
+    scroll-snap-align: start;
+    grid-column: 1/3;
+    grid-row:1;
+  }
+
+  .sect-4-item3{
+    display:none;
+  }
+
+  .sect-4-item4{
+    grid-column: 1 / 3;
+    grid-row:2;
+  }
+
+  .sect-4-item5{
+    display:none;
+  }
+  .sect-4-item6{
+    grid-column: 1 / 3;
+    grid-row:3;
+  }
+
+    /*section fifth */
+    .sect-5-item1{
+      grid-column:1/3;
+      width:80%;
+    }
+  
+    /*section sixth / contact */
+    section#contact{
+      height:180vh;
+    }
+  
+    .sect-6-item1{
+      padding-top:40px;
+      height:80vh;
+    }
+    .sect-6-item2{
+      padding-top:20px;
+      scroll-snap-align: start;
+      text-align: center;
+      grid-column: 1 / 3;
+      width:70%;
+      padding-left: 10%;
+    }
+
+    /*section seven / logos */
+ section#seventh img{
+        width:60%;
+    }
+   
+
+}
+
+@media (max-width:810px){
+
+  .c-section--pad-vh{
+    padding-top:10vh;
+  }
+
+  .c-grid--3x1{
+    display: grid;
+    grid-template-columns:1fr;
+  }
+
+   /*section# second*/
+   .sect-2-title{
+    grid-column:1;
+    grid-row:1;
+  }
+  .sect-2-desc{
+    grid-column:1;
+    grid-row:2;
+  }
+
+  .sect-2-item1 {
+    grid-column:1;
+    grid-row:3;
+    margin-left: 5%;
+ }
+ .sect-2-item1 img{
+  width:250px;
+}
+ .sect-2-item2 {
+  grid-column:1;
+  grid-row:4;
+}
+.sect-2-item2 img{
+  width:250px;
+  margin-left: 5%;
+}
+
+  /*section# third*/
+  
+
+
+  .grid-item2-stretch1{
+    grid-column:1;
+    grid-row:2;
+  }
+
+  .grid-item3-vertical{
+    grid-column:1;
+    grid-row:3;
+  }
+  .grid-item3-vertical img{
+    height: 200px;
+    object-fit:cover;
+  }
+
+
+  .c-grid--fill{
+    grid-template-columns: 1fr 1fr;
+  }
+ 
+  .c-grid--fill img{
+    width:20px;
+  }
+
+  /*section contact*/
+  section#contact{
+    height:200vh;
+  }
+
+  .sect-6-item1{
+    scroll-snap-align: start;
+    height:30vh;
+    
+  }
+  .sect-6-item2{
+    scroll-snap-align: start;
+    height:80vh;
+  }
+
+   /*section 7 / logos*/
+   section#seventh {
+    padding-top: 20px;
+}
+    section#seventh img{
+    width:40%;
+}
+
+
+}
+
+
+
+@media (max-width: 500px){
+  .c-section--pad-vh{
+    padding-top:0vh;
+  }
+  
+  .c-grid--3x1{
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+   /*section# second*/
+   .sect-2-title{
+    grid-column:1 / 3;
+    grid-row:1;
+  }
+  .sect-2-desc{
+    grid-column:1 / 3;
+    grid-row:2;
+  }
+
+  .sect-2-item1 {
+    grid-column:1;
+    grid-row:3;
+    margin-left: 5%;
+ }
+ .sect-2-item1 img{
+  width:200px;
+}
+ .sect-2-item2 {
+  grid-column:1;
+  grid-row:4;
+}
+.sect-2-item2 img{
+  width:200px;
+  margin-left: 5%;
+}
+
+  /*section# third*/
+  .grid-item3-vertical{
+    grid-column:1;
+    grid-row:3;
+    width:200px;
+    margin-left: 5%;
+  }
+
+  .grid-item1-stretch{
+    scroll-snap-align: start;
+  }
+  .grid-item2-stretch1{
+
+    grid-column:1;
+    grid-row:2;
+  }
+
+  .main-punchline--p{
+    font-size:13px;
+  }
+
+  /*section fifth */
+  .sect-5-item1{
+    
+  }
+
+
+  /*section sixth */
+
+  section#contact{
+    height:200vh;
+  }
+
+  .sect-6-item1{
+    scroll-snap-align: start;
+    height:40vh;
+    
+  }
+  .sect-6-item2{
+    scroll-snap-align: start;
+    height:100vh;
+  }
+
+  .o-form__control{
+    min-width:fit-content;
+    max-width: 100%;
+  }
+
+  .list-item-label {
+    font-size:10px;
+    line-height: 0px;
+
+  }
+
+   
+
+  
+  /*section seventh */
+
+  section#seventh img{
+      width:70%;
+  }
+
+  section#footer{
+    height:100vh;
+  }
+}
+
