--- a/square-root/src/App.css
+++ b/square-root/src/App.css
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@1,700&display=swap");
+/*@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@1,700&display=swap");*/
 
 :root {
   --primaryColor: #af9a7d;
@@ -436,7 +436,7 @@ a {
 /* Hero */
 .defaultHero {
   min-height: calc(100vh - var(--nav-size));
-  background: url("./images/background_banner.jpg") center/cover no-repeat;
+  background: url("./images/background/background_banner.jpg") center/cover no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
