--- a/square-root/src/styles/Home.css
+++ b/square-root/src/styles/Home.css
@@ -5,14 +5,53 @@ Smooth Scroll --------*/
 }
 
 .front-container {
-  scroll-behavior: smooth;
-  overscroll-behavior-y: contain;
-  scroll-snap-type: y mandatory;
+  /*scroll-behavior: smooth;*/
+  /*overscroll-behavior-y: contain;*/
+  /*scroll-snap-type: y mandatory;*/
   overflow-y: auto;
   overflow-x: hidden;
   height: calc(100vh - var(--nav-size));
   width: 100%;
   z-index: 1;
+}
+
+/* scroll styles */
+.front-container::-webkit-scrollbar {
+  width: 7px;
+  height: 7px
+}
+
+.front-container::-webkit-scrollbar-button {
+  display: none
+}
+
+.front-container::-webkit-scrollbar-corner {
+  background: none
+}
+
+.front-container::-webkit-scrollbar-track {
+  background-color: #edf2f6;
+  border: 2px solid transparent;
+  border-radius: 3.5px;
+  background-clip: content-box
+}
+
+.front-container::-webkit-scrollbar-thumb {
+  border: 1px solid transparent;
+  border-radius: 3.5px;
+  background-clip: content-box
+}
+
+.front-container::-webkit-scrollbar-thumb:hover {
+  border-width: 0
+}
+
+.front-container::-webkit-scrollbar-thumb {
+  background-color: #434a54
+}
+
+.front-container:hover::-webkit-scrollbar-thumb {
+  background-color: #434a54
 }
 
 /* common for each section */
@@ -253,7 +292,7 @@ section#fourth {
 
 section#fourth .container-desktop {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   gap: 1px 60px;
 }
 
